# storage/api-docs/api-docs.json
@@ -28,7 +28,8 @@
                         "required": true,
                         "schema": {
                             "type": "string",
-                            "format": "date"
+                            "format": "date",
+                            "example": "2040-04-04"
                         }
                     },
                     {
@@ -37,7 +38,8 @@
                         "required": true,
                         "schema": {
                             "type": "string",
-                            "format": "date"
+                            "format": "date",
+                            "example": "2040-04-04"
                         }
                     }
                 ],
@@ -55,7 +57,7 @@
                 }
             }
         },
-        "/api/analytics/hits//by-type/{linkType}": {
+        "/api/analytics/hits/by-type/{linkType}": {
             "get": {
                 "tags": [
                     "hits"
@@ -68,7 +70,18 @@
                         "in": "path",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "type": "string",
+                            "items": {
+                                "type": "string",
+                                "enum": [
+                                    "product",
+                                    "category",
+                                    "static-page",
+                                    "checkout",
+                                    "homepage"
+                                ]
+                            },
+                            "default": "homepage"
                         }
                     },
                     {
@@ -77,7 +90,8 @@
                         "required": true,
                         "schema": {
                             "type": "string",
-                            "format": "date"
+                            "format": "date",
+                            "example": "2000-04-04"
                         }
                     },
                     {
@@ -86,7 +100,8 @@
                         "required": true,
                         "schema": {
                             "type": "string",
-                            "format": "date"
+                            "format": "date",
+                            "example": "2040-04-04"
                         }
                     }
                 ],
